--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,11 +11,11 @@
       = render 'layouts/cart_modal'
       #tophead.row
         .col-md-2.col-xs-6
-          = link_to image_tag('logo.gif'), root_path
+          = link_to image_tag('logo.jpg'), root_path
         .col-md-3.col-md-offset-1.col-xs-6
           #header-contacts.lead
             %i.glyphicon.glyphicon-earphone
-            (063) 415-04-27
+            +91-9988875133
         .col-md-6.col-xs-12
           = render 'layouts/search_form'
       .clearfix.visible-xs
