--- a/app/assets/stylesheets/store/store.css.scss
+++ b/app/assets/stylesheets/store/store.css.scss
@@ -49,7 +49,7 @@ body {
   padding: 0 0 60px;
 }
 
-/* Set the fixed height of the footer here */
+/* Set the fixed height of the footer here 
 #footer {
   height: 60px;
   background-color: #f5f5f5;
@@ -57,7 +57,7 @@ body {
   padding-top:20px;
   padding-bottom:20px;
 }
-
+*/
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -68,7 +68,7 @@ body {
 .container .credit {
   margin: 20px 0;
 }
-
+/*
 #footer {
   background-color:#414141;
 }
@@ -76,6 +76,7 @@ body {
 #footer a {
   color:#efefef;
 }
+*/
 
 h1,h2,h3,h4 {
   font-family: 'Kreon', serif;
@@ -192,8 +193,8 @@ h1 {
 .scroll-top {
    position:fixed;
    bottom:0;
-   right:6%;
-   z-index:100;
+   right:5px;
+   z-index:9999;
    background: #ffcc33;
    font-size:24px;
    border-top-left-radius:3px;
@@ -279,7 +280,7 @@ body {
   padding: 0 0 60px;
 }
 
-/* Set the fixed height of the footer here */
+/* Set the fixed height of the footer here 
 #footer {
   height: 60px;
   background-color: #f5f5f5;
@@ -287,6 +288,7 @@ body {
   padding-top:20px;
   padding-bottom:20px;
 }
+*/
 
 
 /* Custom page CSS
@@ -299,6 +301,7 @@ body {
   margin: 20px 0;
 }
 
+/*
 #footer {
   background-color:#414141;
 }
@@ -306,6 +309,7 @@ body {
 #footer a {
   color:#efefef;
 }
+*/
 
 h1,h2,h3,h4 {
   font-family: 'Kreon', serif;
@@ -355,10 +359,11 @@ h1 {
    z-index:10;
    -webkit-transition: all .6s ease-in-out;
 }
-
+/*
 #footer > .container {
   
 }
+*/
 
 @media (min-width: 767px) {
   .navbar-nav.nav-justified > li{
@@ -422,8 +427,8 @@ h1 {
 .scroll-top {
    position:fixed;
    bottom:0;
-   right:6%;
-   z-index:100;
+   right:5px%;
+   z-index:9999;
    background: #ffcc33;
    font-size:24px;
    border-top-left-radius:3px;
