--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -5,7 +5,9 @@
         %span.sr-only
           = t('common.toggle_menu')
           Toggle navigation
-      = link_to t('common.store_name'), root_path, class: 'navbar-brand'
+      %i.glyphicon.glyphicon-earphone.navbar-brand
+        91-9988875133
+      / = link_to t('common.store_name'), root_path, class: 'navbar-brand'
     #main-navbar-collapse.collapse.navbar-collapse
       %ul.nav.navbar-nav
         - visible_pages.each do |page|
@@ -13,3 +15,4 @@
             = link_to page.title, page_path(id: page.seo_url)
       %ul.nav.navbar-nav.navbar-right
         %li= render 'layouts/user_widget'
+
