--- a/app/views/layouts/_carousal.html.haml
+++ b/app/views/layouts/_carousal.html.haml
@@ -12,24 +12,24 @@
       %img.img-responsive{:src => "/assets/example/bg_suburb.jpg", :style => "width:100%"}
         .container
           .carousel-caption
-            %h1 Bootstrap 3 Carousel Layout
+            %h1 Slide 1
             %p
             %p
-              %a.btn.btn-lg.btn-primary{:href => "http://getbootstrap.com"} Learn More
+              %a.btn.btn-lg.btn-primary{:href => "#"} Learn More
     .item
-      %img.img-responsive{:src => "http://lorempixel.com/2000/600/abstract/1"}
+      %img.img-responsive{:src => "http://placehold.it/1500X500"}
         .container
           .carousel-caption
-            %h1 Changes to the Grid
-            %p Bootstrap 3 still features a 12-column grid, but many of the CSS class names have completely changed.
+            %h1 Slide 2
+            %p Grid Layout.
             %p
               %a.btn.btn-large.btn-primary{:href => "#"} Learn more
     .item
       %img.img-responsive{:src => "http://placehold.it/1500X500"}
         .container
           .carousel-caption
-            %h1 Percentage-based sizing
-            %p With "mobile-first" there is now only one percentage-based grid.
+            %h1 Slide 3
+            %p Percentage-based sizing.
             %p
               %a.btn.btn-large.btn-primary{:href => "#"} Browse gallery
   / Controls
