--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -167,9 +167,9 @@
 						<div class="single-widget">
 						 <h2>Share Us:</h2>
 						 <!-- Facebook -->
-						<a href="https://www.facebook.com/sharer.php?u=https://agile-tor-1455.herokuapp.com/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><img src="assets/fb.png"></a>
+						<a href="https://www.facebook.com/sharer.php?u=https://agile-tor-1455.herokuapp.com/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><img src="<%= asset_path('fb.png') %>"></a>
 						<!-- Google+ -->
-						<a href="https://plus.google.com/share?url=https://agile-tor-1455.herokuapp.com" title="Share on Google+" target="_blank" class="btn btn-googleplus"><img src="assets/gplus.png"></a>
+						<a href="https://plus.google.com/share?url=https://agile-tor-1455.herokuapp.com" title="Share on Google+" target="_blank" class="btn btn-googleplus"><img src="<%= asset_path('gplus.png') %>"></a>
 						</div>
 					</div>
 					
