--- a/app/views/categories/_products_grid.html.haml
+++ b/app/views/categories/_products_grid.html.haml
@@ -8,6 +8,8 @@
               %a{href: seo_product_path(product, product.seo_name)}
                 - if product.images.any?
                   = image_tag product.images.first.image.url(:medium), class: 'media-object', alt: product.name
+                -else
+                  = image_tag ('missing.png'), class: 'media-object' 
               .caption
                 %h3= link_to product.name, seo_product_path(product, product.seo_name)
                 %p= highlight(truncate(product.description, length: 150), search_query)
