--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -156,14 +156,14 @@
 						</div>
 					</div> -->
 					<div class="col-sm-3 ">
-						<div class="single-widget">
+						<!-- <div class="single-widget">
 							<h2>About Bsk</h2>
 							<form action="#" class="searchform">
 								<input type="text" placeholder="Your email address" />
 								<button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-arrow-right"></i></button>
 								<p>Get the most recent updates from <br />our site and be updated your self...</p>
 							</form>
-						</div>
+						</div> -->
 						<div class="single-widget">
 						 <h2>Share Us:</h2>
 						 <!-- Facebook -->
