--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -103,13 +103,18 @@
 				<div class="row">
 					<div class="col-sm-2">
 						<div class="single-widget">
+							
 							<h2>Service</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Online Help</a></li>
-								<li><a href="#">Contact Us</a></li>
-								<li><a href="#">Order Status</a></li>
-								<li><a href="#">FAQ’s</a></li>
-							</ul>
+							
+								<ul class="nav nav-pills nav-stacked">
+									<% visible_pages.each do |page|%>
+										<% if (page.under_heading == "SERVICE" && page.link_type == false) %>
+											<li class: "<% current_page?(page_path(id: page.seo_url)) && 'active' %>">
+              									<%= link_to page.title, page_path(id: page.seo_url) %>
+              								</li>
+										<%end%>
+									<%end%>
+								</ul>
 						</div>
 					</div>
 					<!-- <div class="col-sm-2">
@@ -128,10 +133,13 @@
 						<div class="single-widget">
 							<h2>Policies</h2>
 							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Terms of Use</a></li>
-								<li><a href="#">Privecy Policy</a></li>
-								<li><a href="#">Refund Policy</a></li>
-								<li><a href="#">Billing System</a></li>
+								<% visible_pages.each do |page|%>
+									<% if (page.under_heading == "POLICIES" && page.link_type == false) %>
+										<li class: "<% current_page?(page_path(id: page.seo_url)) && 'active' %>">
+          									<%= link_to page.title, page_path(id: page.seo_url) %>
+          								</li>
+									<%end%>
+								<%end%>
 							</ul>
 						</div>
 					</div>
