--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -11,8 +11,9 @@
     #main-navbar-collapse.collapse.navbar-collapse
       %ul.nav.navbar-nav
         - visible_pages.each do |page|
-          %li{ class: current_page?(page_path(id: page.seo_url)) && 'active'}
-            = link_to page.title, page_path(id: page.seo_url)
+          - if page.link_type == true
+            %li{ class: current_page?(page_path(id: page.seo_url)) && 'active'}
+              = link_to page.title, page_path(id: page.seo_url)
       %ul.nav.navbar-nav.navbar-right
         %li= render 'layouts/user_widget'
 
