--- a/app/views/layouts/_second_menu.html.haml
+++ b/app/views/layouts/_second_menu.html.haml
@@ -1,4 +1,4 @@
-%nav#second-navbar.navbar.navbar-default{:role => "navigation"}
+%nav#second-navbar.navbar.navbar-custom-2{:role => "navigation"}
   .navbar-header
     %button.navbar-toggle{"data-target" => "#second-navbar-collapse", "data-toggle" => "collapse", :type => "button"}
       %span.sr-only= t('common.toggle_menu')
