--- a/app/views/layouts/admin/admin_layout.html.haml
+++ b/app/views/layouts/admin/admin_layout.html.haml
@@ -15,6 +15,7 @@
       = render 'layouts/admin/admin_sidebar'
 
       #page-content-wrapper
+        %a#menu-toggle.btn.btn-success Hide/Show Sidebar
         = render 'layouts/admin/user_widget'
         = render_breadcrumbs :builder => ::BootstrapBreadcrumbsBuilder
         = yield
