--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,24 @@
-<script src="https://maps.googleapis.com/maps/api/js"></script>
+ <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
 <script>
-      function initialize() {
-        var mapCanvas = document.getElementById('map-canvas');
-        var mapOptions = {
-          center: new google.maps.LatLng(30.833106, 76.573294),
-          zoom: 8,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        }
-        var map = new google.maps.Map(mapCanvas, mapOptions)
-      }
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
+	if ( ($(window).height() + 100) < $(document).height() ) {
+	    $('li#top-link-block').removeClass('hidden').affix({
+	    	alert('asd')
+	        // how far to scroll down before link "slides" into view
+	        offset: {top:100}
+	    });
+	}
+//       function initialize() {
+//         var mapCanvas = document.getElementById('map-canvas');
+//         var mapOptions = {
+//           center: new google.maps.LatLng(30.833106, 76.573294),
+//           zoom: 8,
+//           mapTypeId: google.maps.MapTypeId.ROADMAP
+//         }
+//         var map = new google.maps.Map(mapCanvas, mapOptions)
+//       }
+//       google.maps.event.addDomListener(window, 'load', initialize);
+</script>
 	<footer id="footer" class ="navbar  navbar-default"><!--Footer-->
 		<!-- <div class="footer-top">
 			<div class="container">
@@ -92,11 +100,11 @@
 			</div>
 		</div>
 		 -->
-		<div class="footer-widget">
+		<div class="footer-widget ">
 			<div class="col-sm-2">
 						<div class="companyinfo">
 							<h2><span>Bsk</span>-Cooler</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
+							<!-- <p>A online cooler store</p> -->
 						</div>
 					</div>
 			<div class="container">
@@ -145,10 +153,12 @@
 					</div>
 					<div class="col-sm-3 ">
 						<div class="single-widget">
-							<h2>Our Location</h2>
-
-							<div id = "map-canvas" class="address">
-							</div>
+							<h2>Contact Us</h2>
+							 <i class="fa fa-phone" style="color:#B3B3AD;"> 91-9988875133
+            				 </i><br/>
+            				 <i class="fa fa-envelope" style="color:#B3B3AD;"> bskkurali@gmail.com</i>
+							<!-- <div id = "map-canvas" class="address">
+							</div> -->
 						</div>
 					</div>
 					<!-- <div class="col-sm-2">
@@ -174,10 +184,15 @@
 						</div> -->
 						<div class="single-widget">
 						 <h2>Share Us:</h2>
+						
+						 <a href="https://www.facebook.com/sharer.php?u=http://bskcoolers.in/" title="Share on Facebook" target="_blank"><i id="social" class="fa fa-facebook-square fa-3x social-fb"></i></a>
+			            <!-- <a href="https://twitter.com/bootsnipp"><i id="social" class="fa fa-twitter-square fa-3x social-tw"></i></a> -->
+			            <a href="https://plus.google.com/share?url=http://bskcoolers.in/" title="Share on Google+" target="_blank" ><i id="social" class="fa fa-google-plus-square fa-3x social-gp"></i></a>
+			            <a href="mailto:bskkurali@gmail.com"><i id="social" class="fa fa-envelope-square fa-3x social-em"></i></a>
 						 <!-- Facebook -->
-						<a href="https://www.facebook.com/sharer.php?u=https://agile-tor-1455.herokuapp.com/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><img src="<%= asset_path('fb.png') %>"></a>
+						<!-- <a href="https://www.facebook.com/sharer.php?u=http://bskcoolers.in/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><img src="<%#= asset_path('fb.png') %>"></a> -->
 						<!-- Google+ -->
-						<a href="https://plus.google.com/share?url=https://agile-tor-1455.herokuapp.com" title="Share on Google+" target="_blank" class="btn btn-googleplus"><img src="<%= asset_path('gplus.png') %>"></a>
+						<!-- <a href="https://plus.google.com/share?url=http://bskcoolers.in/" title="Share on Google+" target="_blank" class="btn btn-googleplus"><img src="<%#= asset_path('gplus.png') %>"></a> -->
 						</div>
 					</div>
 					
@@ -194,8 +209,8 @@
 			</div>
 		</div>
 		
-	</footer><!--/Footer-->
+	</footer>
 
 <ul class="nav pull-right scroll-top">
-  <li><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
+  <li id="#top-link-block"><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
 </ul>
