--- a/app/views/layouts/admin/_admin_sidebar.html.haml
+++ b/app/views/layouts/admin/_admin_sidebar.html.haml
@@ -8,3 +8,9 @@
     %li= nav_link_to glyphicon('glyphicon-user', text: t('admin.sidebar.users')), admin_users_path, inclusive: true
     %li= nav_link_to glyphicon('glyphicon-file', text: t('admin.sidebar.pages')), admin_pages_path, inclusive: true
     %li= nav_link_to glyphicon('glyphicon-new-window', before_text: t('admin.sidebar.open_store')), store_index_path, target:'_blank'
+:javascript
+  $(document).ready( function() {
+    $("#menu-toggle").click(function(e) {
+     $("#wrapper").toggleClass("active");
+    })
+  });
