--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -154,9 +154,9 @@
 					<div class="col-sm-3 ">
 						<div class="single-widget">
 							<h2>Contact Us</h2>
-							 <i class="fa fa-phone" style="color:#B3B3AD;"> 91-9988875133
+							 <i class="fa fa-phone" style="color:#B3B3AD;"> 91-9988875133, 9815541333
             				 </i><br/>
-            				 <i class="fa fa-envelope" style="color:#B3B3AD;"> bskkurali@gmail.com</i>
+            				 <i class="fa fa-envelope" style="color:#B3B3AD; margin-top: 4px"> bskkurali@gmail.com</i>
 							<!-- <div id = "map-canvas" class="address">
 							</div> -->
 						</div>
@@ -204,7 +204,7 @@
 			<div class="container">
 				<div class="row">
 					<p class="pull-left">Copyright © 2015 Bsk-Cooler. All rights reserved.</p>
-					<p class="pull-right">Develop & Designed by <span><a href="mailto:vishal.singh030@gmail.com">Vishal Singh</a></span></p>
+					<p class="pull-right">Developed & Designed by <span><a href="mailto:vishal.singh030@gmail.com">Vishal Singh</a></span></p>
 				</div>
 			</div>
 		</div>
