--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -5,6 +5,12 @@
 #wrapper {
     padding-left: 250px;
     transition: all 0.4s ease 0s;
+     min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
 }
 
 #sidebar-wrapper {
@@ -97,6 +103,12 @@
 
     #wrapper {
         padding-left: 0;
+         min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
     }
 
     #sidebar-wrapper {
