--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,19 +6,24 @@
     = javascript_include_tag "store/application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body
-    .container
-      = render 'layouts/header'
-      = render 'layouts/cart_modal'
-      #tophead.row
-        .col-md-2.col-xs-6
-          = link_to image_tag('logo.jpg'), root_path
-        .col-md-6.col-xs-12
-          = render 'layouts/search_form'
-      .clearfix.visible-xs
-      -if current_page?(root_url)
-        = render 'layouts/carousal'
-      = render 'layouts/second_menu'
-      = render 'layouts/flash'
-      = yield
-      = render 'layouts/footer'
-      / = debug(params) if Rails.env.development?
+    #wrap
+      .container
+        = render 'layouts/header'
+        = render 'layouts/cart_modal'
+        #tophead.row
+          .col-md-2.col-xs-6
+            = link_to image_tag('logo.jpg'), root_path
+          .col-md-3.col-md-offset-1.col-xs-6
+            #header-contacts.lead
+              / %i.glyphicon.glyphicon-earphone
+              / (063) 415-04-27
+          .col-md-6.col-xs-12
+            = render 'layouts/search_form'
+        .clearfix.visible-xs
+        -if current_page?(root_url)
+          = render 'layouts/carousal'
+        = render 'layouts/second_menu'
+        = render 'layouts/flash'
+        = yield
+    = render 'layouts/footer'
+
