--- a/app/assets/stylesheets/store/main.css
+++ b/app/assets/stylesheets/store/main.css
@@ -317,6 +317,12 @@
 .single-widget ul li a:hover{
 	background:none;
 	color:#FE980F;
+  outline: none;
+}
+.single-widget a:hover{
+  background:none;
+  color:#FE980F;
+  outline: none;
 }
 
 
