--- a/app/assets/stylesheets/store/store.css.scss
+++ b/app/assets/stylesheets/store/store.css.scss
@@ -1,6 +1,9 @@
 // Place all the styles related to the store controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+a:focus {
+  outline:none !important;
+}
 #second-navbar {
 
 }
