--- a/app/views/layouts/_carousal.html.haml
+++ b/app/views/layouts/_carousal.html.haml
@@ -9,21 +9,21 @@
     %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
   .carousel-inner
     .item.active
-      %img.img-responsive{:src => "/assets/example/bg_suburb.jpg", :style => "width:100%"}
+      %img.img-responsive{:src => "/assets/bsk_slide1.jpg", :style => "width:100%"}
         .container
-          .carousel-caption
-            %h1 Slide 1
-            %p
-            %p
-              %a.btn.btn-lg.btn-primary{:href => "#"} Learn More
+          / .carousel-caption
+          /   %h1 Slide 1
+          /   %p
+          /   %p
+          /     %a.btn.btn-lg.btn-primary{:href => "#"} Learn More
     .item
-      %img.img-responsive{:src => "http://placehold.it/1500X500"}
+      %img.img-responsive{:src => "/assets/bsk_slide2.jpg", :style => "width:100%; height:60%;"}
         .container
-          .carousel-caption
-            %h1 Slide 2
-            %p Grid Layout.
-            %p
-              %a.btn.btn-large.btn-primary{:href => "#"} Learn more
+          / .carousel-caption
+          /   %h1 Slide 2
+          /   %p Grid Layout.
+          /   %p
+          /     %a.btn.btn-large.btn-primary{:href => "#"} Learn more
     .item
       %img.img-responsive{:src => "http://placehold.it/1500X500"}
         .container
