--- a/app/assets/stylesheets/store/application.css
+++ b/app/assets/stylesheets/store/application.css
@@ -9,14 +9,8 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *= require bootstrap
  *= require bootstrap-theme
+ *= require font-awesome
  *= require lightbox
  *= require_self
  *= require_tree .
  */
-body {
-    padding-top: 60px;
-}
-
-.single-form {
-    margin-top: 100px;
-}
