--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,209 +1,158 @@
- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-<!-- <script src="https://maps.googleapis.com/maps/api/js"></script> -->
-<script>
-//       function initialize() {
-//         var mapCanvas = document.getElementById('map-canvas');
-//         var mapOptions = {
-//           center: new google.maps.LatLng(30.833106, 76.573294),
-//           zoom: 8,
-//           mapTypeId: google.maps.MapTypeId.ROADMAP
-//         }
-//         var map = new google.maps.Map(mapCanvas, mapOptions)
-//       }
-//       google.maps.event.addDomListener(window, 'load', initialize);
-</script>
-	<footer id="footer" class ="navbar  navbar-default"><!--Footer-->
-		<!-- <div class="footer-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-2">
-						<div class="companyinfo">
-							<h2><span>Bsk</span>-Cooler</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
-						</div>
-					</div>
-					<div class="col-sm-7">
-						<div class="col-sm-3">
-							<div class="video-gallery text-center">
-								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe1.png" alt="" />
-									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
-								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
-							</div>
-						</div>
-						
-						<div class="col-sm-3">
-							<div class="video-gallery text-center">
-								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe2.png" alt="" />
-									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
-								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
-							</div>
-						</div>
-						
-						<div class="col-sm-3">
-							<div class="video-gallery text-center">
-								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe3.png" alt="" />
-									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
-								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
-							</div>
-						</div>
-						
-						<div class="col-sm-3">
-							<div class="video-gallery text-center">
-								<a href="#">
-									<div class="iframe-img">
-										<img src="images/home/iframe4.png" alt="" />
-									</div>
-									<div class="overlay-icon">
-										<i class="fa fa-play-circle-o"></i>
-									</div>
-								</a>
-								<p>Circle of Hands</p>
-								<h2>24 DEC 2014</h2>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="address">
-							<img src="images/home/map.png" alt="" />
-							<p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		 -->
-		<div class="footer-widget ">
-			<div class="col-sm-2">
-						<div class="companyinfo">
-							<h2><span>Bsk</span>-Cooler</h2>
-							<!-- <p>A online cooler store</p> -->
-						</div>
-					</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-2">
-						<div class="single-widget">
-							
-							<h2>Service</h2>
-							
-								<ul class="nav nav-pills nav-stacked">
-									<% visible_pages.each do |page|%>
-										<% if (page.under_heading == "SERVICE" && page.link_type == false) %>
-											<li class: "<% current_page?(page_path(id: page.seo_url)) && 'active' %>">
-              									<%= link_to page.title, page_path(id: page.seo_url) %>
-              								</li>
-										<%end%>
-									<%end%>
-								</ul>
-						</div>
-					</div>
-					<!-- <div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Quock Shop</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">T-Shirt</a></li>
-								<li><a href="#">Mens</a></li>
-								<li><a href="#">Womens</a></li>
-								<li><a href="#">Gift Cards</a></li>
-								<li><a href="#">Shoes</a></li>
-							</ul>
-						</div>
-					</div> -->
-					<div class="col-sm-2">
-						<div class="single-widget">
-							<h2>Policies</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<% visible_pages.each do |page|%>
-									<% if (page.under_heading == "POLICIES" && page.link_type == false) %>
-										<li class: "<% current_page?(page_path(id: page.seo_url)) && 'active' %>">
-          									<%= link_to page.title, page_path(id: page.seo_url) %>
-          								</li>
-									<%end%>
-								<%end%>
-							</ul>
-						</div>
-					</div>
-					<div class="col-sm-3 ">
-						<div class="single-widget">
-							<h2>Contact Us</h2>
-							 <i class="fa fa-phone" style="color:#B3B3AD;"> 91-9988875133, 9815541333
-            				 </i><br/>
-            				 <i class="fa fa-envelope" style="color:#B3B3AD; margin-top: 4px"> bskkurali@gmail.com</i>
-							<!-- <div id = "map-canvas" class="address">
-							</div> -->
-						</div>
-					</div>
-					<!-- <div class="col-sm-2">
-						<div class="single-widget">
-							<h2>About Shopper</h2>
-							<ul class="nav nav-pills nav-stacked">
-								<li><a href="#">Company Information</a></li>
-								<li><a href="#">Careers</a></li>
-								<li><a href="#">Store Location</a></li>
-								<li><a href="#">Affillate Program</a></li>
-								<li><a href="#">Copyright</a></li>
-							</ul>
-						</div>
-					</div> -->
-					<div class="col-sm-3 ">
-						<!-- <div class="single-widget">
-							<h2>About Bsk</h2>
-							<form action="#" class="searchform">
-								<input type="text" placeholder="Your email address" />
-								<button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-arrow-right"></i></button>
-								<p>Get the most recent updates from <br />our site and be updated your self...</p>
-							</form>
-						</div> -->
-						<div class="single-widget">
-						 <h2>Share Us:</h2>
-						
-						 <a href="https://www.facebook.com/sharer.php?u=http://bskcoolers.in/" title="Share on Facebook" target="_blank"><i id="social" class="fa fa-facebook-square fa-3x social-fb"></i></a>
-			            <!-- <a href="https://twitter.com/bootsnipp"><i id="social" class="fa fa-twitter-square fa-3x social-tw"></i></a> -->
-			            <a href="https://plus.google.com/share?url=http://bskcoolers.in/" title="Share on Google+" target="_blank" ><i id="social" class="fa fa-google-plus-square fa-3x social-gp"></i></a>
-			            <a href="mailto:bskkurali@gmail.com"><i id="social" class="fa fa-envelope-square fa-3x social-em"></i></a>
-						 <!-- Facebook -->
-						<!-- <a href="https://www.facebook.com/sharer.php?u=http://bskcoolers.in/" title="Share on Facebook" target="_blank" class="btn btn-facebook"><img src="<%#= asset_path('fb.png') %>"></a> -->
-						<!-- Google+ -->
-						<!-- <a href="https://plus.google.com/share?url=http://bskcoolers.in/" title="Share on Google+" target="_blank" class="btn btn-googleplus"><img src="<%#= asset_path('gplus.png') %>"></a> -->
-						</div>
-					</div>
-					
-				</div>
-			</div>
-		</div>
-		
-		<div class="footer-bottom">
-			<div class="container">
-				<div class="row">
-					<p class="pull-left">Copyright © 2015 Bsk-Cooler. All rights reserved.</p>
-					<p class="pull-right">Developed & Designed by <span><a href="mailto:vishal.singh030@gmail.com">Vishal Singh</a></span></p>
-				</div>
-			</div>
-		</div>
-		
-	</footer>
+<br/>
+<footer id="footer"><!--Footer-->
+	<div class="footer-top">
+	  <div class="container">
+	    <div class="row">
+	      <div class="col-sm-2">
+	        <div class="companyinfo">
+	          <h2><span>e</span>-shop</h2>
+	          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
+	        </div>
+	      </div>
+	      <div class="col-sm-7">
+	        <div class="col-sm-3">
+	          <div class="video-gallery text-center">
+	            <a href="#">
+	              <div class="iframe-img">
+	                <img src="images/home/iframe1.png" alt="" />
+	              </div>
+	              <div class="overlay-icon">
+	                <i class="fa fa-play-circle-o"></i>
+	              </div>
+	            </a>
+	            <p>Circle of Hands</p>
+	            <h2>24 DEC 2014</h2>
+	          </div>
+	        </div>
+	        
+	        <div class="col-sm-3">
+	          <div class="video-gallery text-center">
+	            <a href="#">
+	              <div class="iframe-img">
+	                <img src="images/home/iframe2.png" alt="" />
+	              </div>
+	              <div class="overlay-icon">
+	                <i class="fa fa-play-circle-o"></i>
+	              </div>
+	            </a>
+	            <p>Circle of Hands</p>
+	            <h2>24 DEC 2014</h2>
+	          </div>
+	        </div>
+	        
+	        <div class="col-sm-3">
+	          <div class="video-gallery text-center">
+	            <a href="#">
+	              <div class="iframe-img">
+	                <img src="images/home/iframe3.png" alt="" />
+	              </div>
+	              <div class="overlay-icon">
+	                <i class="fa fa-play-circle-o"></i>
+	              </div>
+	            </a>
+	            <p>Circle of Hands</p>
+	            <h2>24 DEC 2014</h2>
+	          </div>
+	        </div>
+	        
+	        <div class="col-sm-3">
+	          <div class="video-gallery text-center">
+	            <a href="#">
+	              <div class="iframe-img">
+	                <img src="images/home/iframe4.png" alt="" />
+	              </div>
+	              <div class="overlay-icon">
+	                <i class="fa fa-play-circle-o"></i>
+	              </div>
+	            </a>
+	            <p>Circle of Hands</p>
+	            <h2>24 DEC 2014</h2>
+	          </div>
+	        </div>
+	      </div>
+	      <div class="col-sm-3">
+	        <div class="address">
+	          <img src="images/home/map.png" alt="" />
+	          <p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
 
-<ul class="nav pull-right scroll-top">
-  <li id="#top-link-block"><a href="#" title="Scroll to top"><i class="glyphicon glyphicon-chevron-up"></i></a></li>
-</ul>
+	<div class="footer-widget">
+	  <div class="container">
+	    <div class="row">
+	      <div class="col-sm-2">
+	        <div class="single-widget">
+	          <h2>Service</h2>
+	          <ul class="nav nav-pills nav-stacked">
+	            <li><a href="#">Online Help</a></li>
+	            <li><a href="#">Contact Us</a></li>
+	            <li><a href="#">Order Status</a></li>
+	            <li><a href="#">Change Location</a></li>
+	            <li><a href="#">FAQ’s</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	      <div class="col-sm-2">
+	        <div class="single-widget">
+	          <h2>Quock Shop</h2>
+	          <ul class="nav nav-pills nav-stacked">
+	            <li><a href="#">T-Shirt</a></li>
+	            <li><a href="#">Mens</a></li>
+	            <li><a href="#">Womens</a></li>
+	            <li><a href="#">Gift Cards</a></li>
+	            <li><a href="#">Shoes</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	      <div class="col-sm-2">
+	        <div class="single-widget">
+	          <h2>Policies</h2>
+	          <ul class="nav nav-pills nav-stacked">
+	            <li><a href="#">Terms of Use</a></li>
+	            <li><a href="#">Privecy Policy</a></li>
+	            <li><a href="#">Refund Policy</a></li>
+	            <li><a href="#">Billing System</a></li>
+	            <li><a href="#">Ticket System</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	      <div class="col-sm-2">
+	        <div class="single-widget">
+	          <h2>About Shopper</h2>
+	          <ul class="nav nav-pills nav-stacked">
+	            <li><a href="#">Company Information</a></li>
+	            <li><a href="#">Careers</a></li>
+	            <li><a href="#">Store Location</a></li>
+	            <li><a href="#">Affillate Program</a></li>
+	            <li><a href="#">Copyright</a></li>
+	          </ul>
+	        </div>
+	      </div>
+	      <div class="col-sm-3 col-sm-offset-1">
+	        <div class="single-widget">
+	          <h2>About Shopper</h2>
+	          <form action="#" class="searchform">
+	            <input type="text" placeholder="Your email address" />
+	            <button type="submit" class="btn btn-default"><i class="fa fa-arrow-circle-o-right"></i></button>
+	            <p>Get the most recent updates from <br />our site and be updated your self...</p>
+	          </form>
+	        </div>
+	      </div>
+	      
+	    </div>
+	  </div>
+	</div>
+
+	<div class="footer-bottom">
+	  <div class="container">
+	    <div class="row">
+	      <p class="pull-left">Copyright © 2015 Bsk-Cooler. All rights reserved.</p>
+	      <p class="pull-right">Developed & Designed by <span><a target="_blank" href="mailto:vishal.singh030@gmail.com">Vishal Singh</a></span></p>
+	    </div>
+	  </div>
+	</div>
+
+</footer><!--/Footer-->
