--- a/app/assets/stylesheets/store/main.css
+++ b/app/assets/stylesheets/store/main.css
@@ -907,7 +907,7 @@ h2.title {
   transition: height 500ms ease 0s;
   width: 100%;
   display: block;
-  opacity:;
+  /*opacity:;*/
 }
 
 .single-products:hover .product-overlay {
