--- a/app/assets/stylesheets/admin/application.css.scss
+++ b/app/assets/stylesheets/admin/application.css.scss
@@ -1,5 +1,5 @@
 /*
- *= require bootstrap
+ *= require bootstrap.min
  *= require bootstrap-simplex
  *= require jquery.fileupload
  *= require bootstrap-editable
