--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
   <section>
     <div class="container">
       <div class="row">
+        <%= render 'layouts/messages' %>
         <%= yield%>
       </div>
     </div>
