--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -2,7 +2,7 @@
     <%= render "layouts/left_sidebar"%>
 </div>        
 <div class="col-sm-9 padding-right">
-	<%= render 'categories/products_grid', products: @products%> 
+	<%= render 'categories/products_grid', products: @products.where(feature: true)%> 
 </div>
 
 
