--- a/app/views/layouts/_carousal.html.erb
+++ b/app/views/layouts/_carousal.html.erb
@@ -10,7 +10,7 @@
           </ol>
           
           <div class="carousel-inner">
-            <% @products.where(feature: true).each_with_index do|product,index|  %>
+            <% @products.where(feature: true).limit(5).each_with_index do|product,index|  %>
               <% if index == 0 %>
               <div class="item active">
               <% else %>
