--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -28,6 +28,16 @@
     <%end%>
   </div><!--/category-products-->
 
+  <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- popup -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-5707515377954844"
+     data-ad-slot="4570092413"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
   <!--<div class="brands_products"><!--brands_products
     <h2>Brands</h2>
     <div class="brands-name">
