--- a/app/views/admin/products/_product_fields.html.haml
+++ b/app/views/admin/products/_product_fields.html.haml
@@ -3,7 +3,7 @@
   = f.text_field :name, class: 'form-control'
 .form-group
   = f.label :description
-  = f.text_area :description, class: 'form-control', rows: 12
+  = f.cktext_area :description, class: 'form-control', rows: 14
 
 %hr
 .row
